# pandas-polars-comparation

./: .gitignore  README.md  pyproject.toml
benchmarks/: loading.py  selection.py
benchmarks/helpers/: performance.py
data/: generate_data.py
