[tool.poetry]
name = "pandas-polars-comparation"
version = "0.1.0"
description = ""
authors = ["Santiago Orozco <santiago.orozco@prediktia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.20.30"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
